--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,5 +1,7 @@
 // Typography
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 h1,
 .h1,
 h2,
@@ -13,52 +15,54 @@ h5,
 h6,
 .h6,
 .h {
-	font-weight: bold;
-	margin: 0 0 0.5em;
-	color: $headings-color;
+    font-weight: bold;
+    margin: 0 0 0.5em;
+    color: var(--color-text-primary);
+    transition: color var(--transition-speed);
 }
 
 h1,
 .h1 {
-	font-size: $h1-font-size;
+    font-size: $h1-font-size;
 }
 
 h2,
 .h2 {
-	font-size: $h2-font-size;
+    font-size: $h2-font-size;
 }
 
 h3,
 .h3 {
-	font-size: $h3-font-size;
+    font-size: $h3-font-size;
 }
 
 h4,
 .h4 {
-	font-size: $h4-font-size;
+    font-size: $h4-font-size;
 }
 
 h5,
 .h5 {
-	font-size: $h5-font-size;
+    font-size: $h5-font-size;
 }
 
 h6,
 .h6 {
-	font-size: $h6-font-size;
+    font-size: $h6-font-size;
 }
 
 p {
-	margin: 0 0 1em;
+    margin: 0 0 1em;
 }
 
 a {
-	color: $base-link-color;
-	text-decoration: none;
-	transition: color .3s ease;
+    color: var(--color-link);
+    text-decoration: none;
+    transition: color var(--transition-speed);
 
-	&:hover,
-	&:focus {
-		text-decoration: none;
-	}
+    &:hover,
+    &:focus {
+        color: var(--color-link-hover);
+        text-decoration: none;
+    }
 }
