--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -1,8 +1,250 @@
-
-
 .container {
     max-width: 1384px;
     width: 100%;
     margin: 0 auto;
     padding: 0 14px;
+}
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 888px;
+    width: 95%;
+    max-height: 95%;
+    background-color: var(--color-bg-primary);
+    border-radius: 33px;
+    padding: 95px 40px;
+    box-shadow: 0px 4px 6px 0px #4C146814;
+    z-index: 1000;
+    text-align: center;
+    border: 1px solid $pink;
+    overflow: hidden;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: all;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        @include adaptive-value("left", -750, -780, 1);
+        aspect-ratio: 1 / 1;
+        width: auto;
+        height: 530px;
+        background: radial-gradient(59.01% 59.01% at 35.17% 31.17%, rgba(255, 81, 211, 0.77) 0%, rgba(255, 81, 211, 0.77) 100%);
+        filter: blur(230px);
+        border-radius: 50%;
+        z-index: -1;
+    }
+
+    &__bg {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        pointer-events: none;
+
+        @include media ("<phone") {
+            top: 5%;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+            @include media ("<phone") {
+                object-fit: fill;
+            }
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        z-index: 1001;
+        width: 14px;
+        height: 14px;
+
+        span {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            display: block;
+            width: 100%;
+            height: 1px;
+
+            background-color: #828282;
+
+            &:first-child {
+                transform: translate(-50%, -50%) rotate(45deg);
+            }
+
+            &:last-child {
+                transform: translate(-50%, -50%) rotate(-45deg);
+            }
+        }
+    }
+
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        max-width: 650px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    h2 {
+        @include adaptive-value("font-size", 40, 24, 1);
+        font-weight: 500;
+        line-height: 120%;
+        letter-spacing: -1.5px;
+        margin-bottom: 10px;
+    }
+
+    p {
+        @include adaptive-value("font-size", 22, 14, 1);
+        font-weight: 500;
+        line-height: 120%;
+
+        [data-theme="light"] & {
+            color: #828282;
+        }
+
+        br{
+            display: none;
+
+            @include media ("<tablet") {
+                display: block;
+            }
+        }
+    }
+
+    &__form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        border: 1px solid $pink;
+        max-width: 310px;
+        width: 100%;
+        margin: 30px auto 0 auto;
+        border-radius: 33px;
+        padding: 4px 3px 4px 13px;
+        background-color: var(--color-bg-primary);
+
+        @include media ("<tablet") {
+            flex-direction: column;
+            border: none;
+            max-width: 100%;
+            padding: 0;
+            border-radius: 0;
+            background-color: transparent;
+            row-gap: 8px;
+        }
+
+        input {
+            width: 100%;
+            border: none;
+            outline: none;
+            background: transparent;
+            font-size: 18px;
+            line-height: 120%;
+
+            @include media ("<tablet") {
+                border: 1px solid $pink;
+                border-radius: 33px;
+                padding: 10px 16px;
+                background-color: var(--color-bg-primary);
+            }
+
+            @include placeholder {
+                color: rgba(255, 255, 255, 0.3);
+
+                [data-theme="light"] & {
+                    color: #E8E8E8;
+                }
+            }
+        }
+
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(98.09deg, #FA5EB5 18.04%, #8610E1 100%);
+            min-width: 34px;
+            width: 34px;
+            height: 34px;
+            border-radius: 50%;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 0;
+            box-shadow: 0px 4px 6px 0px #4C146814;
+
+
+            @include media ("<tablet") {
+                width: 100%;
+                border-radius: 33px;
+                height: 44px;
+            }
+
+            [data-theme="light"] & {
+                background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
+                    linear-gradient(142.93deg, #FFB2EB 15.16%, #FF51D3 95.7%);
+                color: $white-text;
+            }
+
+            span {
+                display: none;
+
+                @include media ("<tablet") {
+                    display: block;
+                }
+            }
+
+            img {
+                @include media ("<tablet") {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: all;
+    }
 }
