Enhance Vite configuration to support partials from multiple directories and enable template watching. Add new favicon images, hero section HTML, and associated styles. Update index.html to include new assets and restructure layout for the hero section.

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -6,7 +6,9 @@ $black-bg: #121212;
 $black-text: #1C1C1C;
 $white-bg: #F7F7F7;
 $white-text: #FFFFFF;
-$pink:#FA5EB5;
+$pink:#FFB2EB;
+$gray:#828282;
+
 
 // CSS Custom Properties (Variables) for theme colors
 // These variables automatically switch between light and dark themes
