--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -1,8 +1,8 @@
 .container {
-    max-width: 1384px;
+    max-width: 1320px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 14px;
+    padding: 0 10px;
 }
 
 .popup {
@@ -128,7 +128,7 @@
             color: #828282;
         }
 
-        br{
+        br {
             display: none;
 
             @include media ("<tablet") {
@@ -246,5 +246,51 @@
         opacity: 1;
         visibility: visible;
         pointer-events: all;
+    }
+}
+
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 14px;
+    border: 1px solid $pink;
+    border-radius: 28px;
+    background-color: var(--color-bg-primary);
+    font-size: 18px;
+    line-height: 120%;
+    font-weight: 500;
+    letter-spacing: -1.5px;
+    padding: 0 0 0 24px;
+    box-shadow: 0px 0px 23px 0px #F2F2F233 inset;
+
+    &:hover {
+        span {
+            rotate: 45deg;
+        }
+    }
+
+
+    span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include adaptive-value("width", 56, 45, 1);
+        @include adaptive-value("height", 56, 45, 1);
+        border-radius: 50%;
+        background: linear-gradient(98.09deg, #FA5EB5 18.04%, #8610E1 100%);
+        transition: rotate 0.3s ease;
+        @include adaptive-value("font-size", 18, 13, 1);
+        font-weight: 500;
+
+        [data-theme="light"] & {
+            background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
+                linear-gradient(142.93deg, #FFB2EB 15.16%, #FF51D3 95.7%);
+        }
+
+        img {
+            width: 14px;
+            height: 14px;
+        }
     }
 }
