--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,5 +36,5 @@ $media-expressions: (
 @import 'layout/header';
 @import 'layout/common';
 @import 'layout/hero';
-@import 'layout/finally';
+@import 'layout/content-block';
 @import 'layout/footer';
