--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -42,7 +42,7 @@
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    transition: opacity 0.3s ease, visibility 0.3s ease, var(--transition-speed);
 
     &.active {
         opacity: 1;
@@ -258,7 +258,7 @@
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    transition: opacity 0.3s ease, visibility 0.3s ease, background-color var(--transition-speed);
 
     &.active {
         opacity: 1;
@@ -281,6 +281,7 @@
     letter-spacing: -1.5px;
     padding: 0 0 0 24px;
     box-shadow: 0px 0px 23px 0px #F2F2F233 inset;
+    transition: var(--transition-speed);
 
     [data-theme="light"] & {
         background: rgba($color: #ffffff, $alpha: 0.8)
@@ -300,7 +301,7 @@
         @include adaptive-value("height", 56, 45, 1);
         border-radius: 50%;
         background: linear-gradient(98.09deg, #FA5EB5 18.04%, #8610E1 100%);
-        transition: rotate 0.3s ease;
+        transition: rotate 0.3s ease, background var(--transition-speed);
         @include adaptive-value("font-size", 18, 13, 1);
         font-weight: 500;
 
