--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
     padding: 20px 0;
-    transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: var(--transition-speed);
 
     .container{
         max-width: 1388px;
@@ -14,7 +14,7 @@
         background-color: var(--color-bg-secondary);
         border-radius: 9999px;
         padding: 8px 10px;
-        transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+        transition: var(--transition-speed);
         box-shadow: 0px 2px 20px 0px #0000001A;
     }
 
@@ -75,6 +75,7 @@
         box-shadow: 0px 4px 23.2px 0px #FA5EB582;
         position: relative;
         overflow: hidden;
+        transition: var(--transition-speed);
 
         [data-theme="light"] & {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
