Add new mention section with images and styles, update index.html to include the section, and replace SVG stars with PNG assets for improved compatibility.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,4 +37,5 @@ $media-expressions: (
 @import 'layout/common';
 @import 'layout/hero';
 @import 'layout/content-block';
+@import 'layout/mention';
 @import 'layout/footer';
