Add new fees section with images and styles, update index.html to include the section, and enhance mention section with light mode support.

--- a/src/styles/layout/_content-block.scss
+++ b/src/styles/layout/_content-block.scss
@@ -162,6 +162,11 @@
 }
 
 .short-section {
+    padding: 52px 0;
+
+    @include media ("<tablet") {
+        padding: 80px 0 50px 0;
+    }
 
     &__content {
         flex-direction: column;
