--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,4 +38,5 @@ $media-expressions: (
 @import 'layout/hero';
 @import 'layout/content-block';
 @import 'layout/mention';
+@import 'layout/fees';
 @import 'layout/footer';
