Enhance mention styles to support light mode by adding conditional display properties for light and dark themes in _mention.scss.

--- a/src/styles/layout/_mention.scss
+++ b/src/styles/layout/_mention.scss
@@ -87,6 +87,20 @@
         width: 100%;
         margin: 0 auto;
 
+        &.light {
+            display: none;
+        }
+
+        [data-theme="light"] & {
+            &.dark {
+                display: none;
+            }
+
+            &.light {
+                display: block;
+            }
+        }
+
         @include media ("<tablet") {
             height: 205px;
         }
