Add new card images and section for top cards in HTML, update styles for cards layout, and include new SCSS file for card styles.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,4 +39,5 @@ $media-expressions: (
 @import 'layout/content-block';
 @import 'layout/mention';
 @import 'layout/fees';
+@import 'layout/cards';
 @import 'layout/footer';
