--- a/src/styles/layout/_cards.scss
+++ b/src/styles/layout/_cards.scss
@@ -90,6 +90,10 @@
                 width: 316px;
                 height: 316px;
 
+                [data-theme="light"] & {
+                    display: none;
+                }
+
                 @include media ("<tablet") {
                     display: none;
                 }
@@ -116,11 +120,16 @@
                     &::after {
                         content: '';
                         position: absolute;
-                        bottom: -5%;
+                        bottom: 0;
                         left: 0;
                         width: 100%;
                         height: 40%;
                         background: linear-gradient(0deg, #1C1C1C 50.11%, rgba(28, 28, 28, 0.7) 69.41%, rgba(28, 28, 28, 0) 99.43%);
+
+                        [data-theme="light"] & {
+                            background: linear-gradient(0deg, #FFFFFF 49.42%, rgba(255, 255, 255, 0.7) 58.41%, rgba(255, 255, 255, 0) 80.85%);
+
+                        }
                     }
                 }
             }
