--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,4 +40,5 @@ $media-expressions: (
 @import 'layout/mention';
 @import 'layout/fees';
 @import 'layout/cards';
+@import 'layout/magic';
 @import 'layout/footer';
