--- a/src/styles/layout/_content-block.scss
+++ b/src/styles/layout/_content-block.scss
@@ -24,18 +24,8 @@
         width: 100%;
         margin: 0 auto;
         color: transparent;
-        background: linear-gradient(119.79deg, #E2E2E2 35.69%, #686868 97.88%);
-        -webkit-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
+        @include gradient-text;
         transition: background var(--transition-speed);
-
-        [data-theme="light"] & {
-            background: linear-gradient(278.03deg, #686868 11.66%, #000000 70.92%);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
 
         br {
             display: none;
