--- a/src/styles/layout/_magic.scss
+++ b/src/styles/layout/_magic.scss
@@ -62,6 +62,12 @@
         @include adaptive-value("margin-bottom", 95, 40, 1);
         @include adaptive-value("border-radius", 40, 17, 1);
 
+        [data-theme="light"] & {
+            border-width: 5px;
+            background: rgba(255, 255, 255, 0.3);
+            box-shadow: 0px 4px 6px 2px #4C146814;
+        }
+
         &-img {
             width: 55%;
             height: 55%;
@@ -78,7 +84,7 @@
             @include adaptive-value("margin-bottom", 16, 8, 1);
         }
 
-        br{
+        br {
             display: none;
 
             @include media ("<tablet") {
@@ -91,6 +97,10 @@
             font-weight: 600;
             max-width: 655px;
             color: #E8E8E8;
+
+            [data-theme="light"] & {
+                color: $black-text;
+            }
         }
 
         &.bottom-text {
