--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -1,3 +1,19 @@
+html {
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: $pink;
+        border-radius: 10px;
+        width: 10px;
+    }
+}
+
 #wrapper {
     overflow: hidden;
 }
