Add new 'ask' section with images and styles, update index.html to include the section, and create corresponding SCSS for layout and responsiveness.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,4 +42,5 @@ $media-expressions: (
 @import 'layout/cards';
 @import 'layout/magic';
 @import 'layout/feed';
+@import 'layout/ask';
 @import 'layout/footer';
