--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,4 +43,5 @@ $media-expressions: (
 @import 'layout/magic';
 @import 'layout/feed';
 @import 'layout/ask';
+@import 'layout/smart';
 @import 'layout/footer';
