Add new 'ready' section in index.html, create corresponding HTML and SCSS files, and add light and dark mode images for enhanced theme support and visual appeal.

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -8,7 +8,7 @@ $white-bg: #F7F7F7;
 $white-text: #FFFFFF;
 $pink:#FFB2EB;
 $gray:#828282;
-
+$violet:#C136F3;
 
 // CSS Custom Properties (Variables) for theme colors
 // These variables automatically switch between light and dark themes
