--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,4 +44,5 @@ $media-expressions: (
 @import 'layout/feed';
 @import 'layout/ask';
 @import 'layout/smart';
+@import 'layout/ready';
 @import 'layout/footer';
