--- a/src/styles/layout/_feed.scss
+++ b/src/styles/layout/_feed.scss
@@ -1,5 +1,8 @@
 .feed {
+    padding-top: 80px;
+
     @include media ("<desktop") {
+        padding-top: 40px;
         padding-bottom: 50px;
     }
 
