Add new 'future' section in index.html, create corresponding HTML and SCSS files, and add light and dark mode images for improved visual appeal and theme support.

--- a/src/styles/layout/_ready.scss
+++ b/src/styles/layout/_ready.scss
@@ -81,6 +81,7 @@
     }
 
     &__img {
+        display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
