--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,4 +45,5 @@ $media-expressions: (
 @import 'layout/ask';
 @import 'layout/smart';
 @import 'layout/ready';
+@import 'layout/future';
 @import 'layout/footer';
