--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -298,7 +298,6 @@ html {
     font-size: 18px;
     line-height: 120%;
     font-weight: 500;
-    letter-spacing: -1.5px;
     padding: 0 0 0 24px;
     box-shadow: 0px 0px 23px 0px #F2F2F233 inset;
     transition: var(--transition-speed);
@@ -309,6 +308,7 @@ html {
 
     &:hover {
         span {
+            transition: var(--transition-speed);
             rotate: 45deg;
         }
     }
@@ -324,6 +324,7 @@ html {
         transition: rotate 0.3s ease, background var(--transition-speed);
         @include adaptive-value("font-size", 18, 13, 1);
         font-weight: 500;
+        transition: var(--transition-speed);
 
         [data-theme="light"] & {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
