--- a/src/styles/layout/_content-block.scss
+++ b/src/styles/layout/_content-block.scss
@@ -1,4 +1,5 @@
 .content-block {
+    overflow: hidden;
 
     &__inner {
         position: relative;
@@ -350,6 +351,11 @@
 }
 
 .promise {
+    padding: 50px 0;
+
+    @include media ("<tablet") {
+        padding: 25px 0;
+    }
 
     &__content {
         @include adaptive-value("padding-top", 275, 120, 1);
