--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,1 +1,31 @@
-<footer id="footer"></footer>
+<footer id="footer" class="footer">
+    <div class="container">
+        <div class="footer__content">
+            <div class="footer__logo">
+                <img src="/images/logo.svg" alt="logo">
+            </div>
+            <picture class="footer__pig dark">
+                <source srcset="/images/footer-pig.webp" type="image/webp">
+                <img src="/images/footer-pig.png" alt="image not found">
+            </picture>
+            <picture class="footer__pig light">
+                <source srcset="/images/footer-pig-light.webp" type="image/webp">
+                <img src="/images/footer-pig-light.png" alt="image not found">
+            </picture>
+            <div class="footer__social">
+                <a href="#" target="_blank" class="footer__social-link">
+                    <img src="/images/social-icon-1.svg" alt="image not found">
+                </a>
+                <a href="#" target="_blank" class="footer__social-link">
+                    <img src="/images/social-icon-2.svg" alt="image not found">
+                </a>
+                <a href="#" target="_blank" class="footer__social-link">
+                    <img src="/images/social-icon-3.svg" alt="image not found">
+                </a>
+                <a href="#" target="_blank" class="footer__social-link">
+                    <img src="/images/social-icon-4.svg" alt="image not found">
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
