--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,1 +1,69 @@
-#footer {}
+.footer {
+    padding: 15px 0;
+    &__content {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        gap: 28px;
+    }
+
+    &__logo {
+        width: 56px;
+        height: 56px;
+        border-radius: 50%;
+        background: #FFFFFF14;
+        padding: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        box-shadow: 0px 4px 6px 0px #4C146814;
+
+        // @include media ("<phone") {
+        //     order: 2;
+        //     width: 44px;
+        //     height: 44px;
+        // }
+
+        &::before {
+            content: '';
+            position: absolute;
+            border-radius: 50%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0px 0px 3.5px 0px #F2F2F233 inset;
+        }
+    }
+
+    &__pig {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 120px;
+        width: 100%;
+        margin: 0 auto;
+
+        &.light {
+            display: none;
+        }
+
+        [data-theme="light"] & {
+            &.dark {
+                display: none;
+            }
+
+            &.light {
+                display: flex;
+            }
+        }
+    }
+
+    &__social {
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+    }
+}
