--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,4 +46,5 @@ $media-expressions: (
 @import 'layout/smart';
 @import 'layout/ready';
 @import 'layout/future';
+@import 'layout/swipe';
 @import 'layout/footer';
