--- a/src/styles/layout/_cards.scss
+++ b/src/styles/layout/_cards.scss
@@ -493,6 +493,10 @@
 .cards-bottom {
     padding: 80px 0;
 
+    @include media ("<tablet") {
+        padding: 40px 0;
+    }
+
     &__item {
         display: flex;
         align-items: center;
