--- a/src/styles/layout/_swipe.scss
+++ b/src/styles/layout/_swipe.scss
@@ -11,9 +11,9 @@
     &.active {
         height: auto;
 
-        .swipe__content{
-            margin-bottom: -23%;
-            
+        .swipe__content {
+            margin-bottom: -20%;
+
             @include media ("<tablet") {
                 margin-bottom: -30%;
             }
@@ -75,7 +75,21 @@
         width: 90%;
         margin: 0 auto;
 
-        &:nth-child(1) {
+        &.light {
+            display: none;
+        }
+
+        [data-theme="light"] & {
+            &.dark {
+                display: none;
+            }
+
+            &.light {
+                display: block;
+            }
+        }
+
+        &.img-1 {
             z-index: 3;
 
             &::before {
@@ -89,11 +103,11 @@
             }
         }
 
-        &:nth-child(2) {
+        &.img-2 {
             z-index: 2;
         }
 
-        &:nth-child(3) {
+        &.img-3 {
             z-index: 1;
         }
 
