Add wallet section with corresponding HTML, SCSS, and new images for enhanced visual appeal and user experience.

--- a/src/styles/layout/_content-block.scss
+++ b/src/styles/layout/_content-block.scss
@@ -49,6 +49,11 @@
 }
 
 .finally {
+    padding: 50px 0;
+
+    @include media ("<tablet") {
+        padding: 25px 0;
+    }
 
     &__icon {
         position: absolute;
