--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,4 +47,5 @@ $media-expressions: (
 @import 'layout/ready';
 @import 'layout/future';
 @import 'layout/swipe';
+@import 'layout/wallet';
 @import 'layout/footer';
