--- a/src/styles/layout/_wallet.scss
+++ b/src/styles/layout/_wallet.scss
@@ -2,11 +2,6 @@
     padding-top: 40px;
     position: relative;
     overflow: hidden;
-    height: 100vh;
-
-    @include media ("<tablet") {
-        height: auto !important;
-    }
 
     &::before {
         content: '';
@@ -21,6 +16,10 @@
         height: 40%;
         z-index: -1;
         pointer-events: none;
+
+        [data-theme="light"] & {
+            display: none;
+        }
     }
 
     &::after {
@@ -33,6 +32,10 @@
         height: 35%;
         z-index: 1;
         pointer-events: none;
+
+        [data-theme="light"] & {
+            background: linear-gradient(0deg, #F7F7F7 0%, rgba(247, 247, 247, 0) 60.58%);
+        }
     }
 
     .container {
@@ -53,6 +56,14 @@
         text-transform: uppercase;
         font-weight: 600;
         font-family: 'Poppins', serif;
+
+        [data-theme="light"] & {
+            background: linear-gradient(180deg, #F5A2ED -66.94%, #F7F7F7 87.63%);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            color: transparent;
+        }
 
         &.text-1 {
             top: 45%;
@@ -116,6 +127,10 @@
     padding: 60px 0;
     position: relative;
 
+    @include media ("<tablet") {
+        height: 100vh !important;
+    }
+
     &::before {
         content: '';
         position: absolute;
@@ -129,6 +144,10 @@
         height: 40%;
         z-index: -1;
         pointer-events: none;
+
+        [data-theme="light"] & {
+            display: none;
+        }
     }
 
     .container {
@@ -143,7 +162,12 @@
             width: 30%;
             height: 50%;
             background: linear-gradient(90deg, #121212 2.55%, rgba(18, 18, 18, 0) 99.92%);
+
             z-index: 1;
+
+            [data-theme="light"] & {
+                background: linear-gradient(90deg, #F7F7F7 2.55%, rgba(247, 247, 247, 0) 99.92%);
+            }
         }
 
         &::after {
@@ -155,7 +179,12 @@
             width: 30%;
             height: 50%;
             background: linear-gradient(270deg, #121212 2.55%, rgba(18, 18, 18, 0) 99.92%);
+
             z-index: 1;
+
+            [data-theme="light"] & {
+                background: linear-gradient(270deg, #F7F7F7 2.55%, rgba(247, 247, 247, 0) 99.92%);
+            }
         }
     }
 
@@ -199,6 +228,10 @@
             width: 100%;
             margin: 0 auto;
             @include adaptive-value("margin-bottom", 16, 8, 1);
+
+            [data-theme="light"] & {
+                color: $black-text;
+            }
         }
 
 
@@ -233,6 +266,10 @@
         background: linear-gradient(180deg, #121212 33%, rgba(18, 18, 18, 0) 75%);
         width: 100%;
         height: 100%;
+
+        [data-theme="light"] & {
+            background: linear-gradient(180deg, #F7F7F7 33.98%, rgba(247, 247, 247, 0) 75%);
+        }
     }
 
 
@@ -249,6 +286,10 @@
         height: 62%;
         z-index: -1;
         pointer-events: none;
+
+        [data-theme="light"] & {
+            display: none;
+        }
     }
 
     .container {
